# my_weather

./: .gitignore  README.md  pyproject.toml
my_weather/: main.py
tests/: test_my_weather.py
