[tool.poetry]
name = "my_weather"
version = "0.1.0"
description = "Simple CLI weather app to give me an excuse to try out Typer"
authors = ["Rich Barlow <rsb177@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
ipython = "^7.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79